--- a/sqlx-core/Cargo.toml
+++ b/sqlx-core/Cargo.toml
@@ -17,8 +17,10 @@ default = []
 unstable = []
 postgres = [ "md-5" ]
 mysql = [ "sha-1", "sha2", "generic-array", "num-bigint", "base64", "digest", "rand" ]
+tls = ["async-native-tls"]
 
 [dependencies]
+async-native-tls = { version = "0.3", optional = true }
 async-std = { version = "1.4.0", default-features = false, features = [ "unstable" ] }
 async-stream = { version = "0.2.0", default-features = false }
 base64 = { version = "0.11.0", default-features = false, optional = true, features = [ "std" ] }
